--- a/client/app/index.html
+++ b/client/app/index.html
@@ -56,6 +56,9 @@
     <![endif]-->
     <!-- endbuild -->
 
+    <!-- Manually added scripts -->
+    <script src="bower_components/socket.io-client/socket.io.js"></script>
+
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
@@ -88,6 +91,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/services/socketfactory.js"></script>
         <!-- endbuild -->
 </body>
 </html>
