added a new route for student schema

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -92,6 +92,12 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/services/socketfactory.js"></script>
+        <script src="scripts/services/schemaservice.js"></script>
+        <script src="scripts/controllers/studentschema.js"></script>
+        <script src="scripts/directives/schemadirective.js"></script>
+        <script src="scripts/directives/schemaslotdirective.js"></script>
+        <script src="scripts/services/schemafactory.js"></script>
+        <script src="scripts/services/schemaslotfactory.js"></script>
         <!-- endbuild -->
 </body>
 </html>
