rendering the schemaslots, but havnt solved the paging yet

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -99,6 +99,8 @@
         <script src="scripts/directives/schemaslotdirective.js"></script>
         <script src="scripts/services/schemafactory.js"></script>
         <script src="scripts/services/schemaslotfactory.js"></script>
+        <script src="scripts/services/datetimeservice.js"></script>
+        <script src="scripts/services/stringservice.js"></script>
         <!-- endbuild -->
 </body>
 </html>
