added a slots paging service to handle which slots to display

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -101,6 +101,7 @@
         <script src="scripts/services/schemaslotfactory.js"></script>
         <script src="scripts/services/datetimeservice.js"></script>
         <script src="scripts/services/stringservice.js"></script>
+        <script src="scripts/services/schemaslotspagingservice.js"></script>
         <!-- endbuild -->
 </body>
 </html>
