disabled the menu per default

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -21,19 +21,18 @@
 
     <!-- Add your site or application content here -->
     <div class="container">
-      <div class="header">
-        <ul class="nav nav-pills pull-right">
+      <div ng-controller="HeaderCtrl" class="header">
+        <ul ng-if="visibleMenu" class="nav nav-pills pull-right">
           <li class="active"><a ng-href="#">Home</a></li>
           <li><a ng-href="#/about">About</a></li>
           <li><a ng-href="#">Contact</a></li>
         </ul>
-        <h3 class="text-muted">client</h3>
+        <h3 class="text-muted">Boka tid</h3>
       </div>
 
       <div ng-view=""></div>
 
       <div class="footer">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
       </div>
     </div>
 
@@ -92,6 +91,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/header.js"></script>
         <script src="scripts/services/socketfactory.js"></script>
         <script src="scripts/services/schemaservice.js"></script>
         <script src="scripts/controllers/studentschema.js"></script>
