extracted the generic schema stuff to an own controller which inherits the scope from its parent

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -97,6 +97,7 @@
         <script src="scripts/services/socketfactory.js"></script>
         <script src="scripts/services/schemaservice.js"></script>
         <script src="scripts/controllers/studentschema.js"></script>
+        <script src="scripts/controllers/schema.js"></script>
         <script src="scripts/directives/schemadirective.js"></script>
         <script src="scripts/directives/schemaslotdirective.js"></script>
         <script src="scripts/services/schemafactory.js"></script>
@@ -106,6 +107,7 @@
         <script src="scripts/services/schemaslotspagingservice.js"></script>
         <script src="scripts/services/studentservice.js"></script>
         <script src="scripts/services/studentfactory.js"></script>
+        <script src="scripts/controllers/teacherschema.js"></script>
         <!-- endbuild -->
 </body>
 </html>
