code to retrieve a teachers name so it can be emit to the parent controller and add it to the footer

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -108,6 +108,8 @@
         <script src="scripts/services/studentservice.js"></script>
         <script src="scripts/services/studentfactory.js"></script>
         <script src="scripts/controllers/teacherschema.js"></script>
+        <script src="scripts/services/teacherfactory.js"></script>
+        <script src="scripts/services/teacherservice.js"></script>
         <!-- endbuild -->
 </body>
 </html>
