--- a/client/app/index.html
+++ b/client/app/index.html
@@ -66,6 +66,7 @@
 
 <!-- Manually added scripts -->
 <script src="bower_components/socket.io-client/socket.io.js"></script>
+<script src="bower_components/moment/min/moment-with-locales.min.js"></script>
 
 
 <!-- build:js(.) scripts/vendor.js -->
@@ -80,7 +81,6 @@
 <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script src="bower_components/angular-local-storage/angular-local-storage.js"></script>
 <script src="bower_components/angular-socket-io/socket.js"></script>
-<script src="bower_components/moment/moment.js"></script>
 <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/affix.js"></script>
 <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/alert.js"></script>
 <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/button.js"></script>
