added a new page for displaying a table of teacher schemas

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -121,6 +121,7 @@
 <script src="scripts/services/teacherservice.js"></script>
 <script src="scripts/controllers/datepicker.js"></script>
 <script src="scripts/directives/datepickerdirective.js"></script>
+<script src="scripts/controllers/teacherschemas.js"></script>
 <!-- endbuild -->
 </body>
 </html>
