--- a/client/app/index.html
+++ b/client/app/index.html
@@ -122,6 +122,8 @@
 <script src="scripts/controllers/datepicker.js"></script>
 <script src="scripts/directives/datepickerdirective.js"></script>
 <script src="scripts/controllers/teacherschemas.js"></script>
+<script src="scripts/controllers/editibletextcell.js"></script>
+<script src="scripts/directives/editibletextcell.js"></script>
 <!-- endbuild -->
 </body>
 </html>
