--- a/client/app/index.html
+++ b/client/app/index.html
@@ -124,6 +124,7 @@
 <script src="scripts/controllers/teacherschemas.js"></script>
 <script src="scripts/controllers/editibletextcell.js"></script>
 <script src="scripts/directives/editibletextcell.js"></script>
+<script src="scripts/directives/focus.js"></script>
 <!-- endbuild -->
 </body>
 </html>
