--- a/client/app/index.html
+++ b/client/app/index.html
@@ -94,13 +94,13 @@
 <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/tooltip.js"></script>
 <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/popover.js"></script>
 <script src="bower_components/underscore/underscore.js"></script>
+<script src="bower_components/ng-breadcrumbs/dist/ng-breadcrumbs.min.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
 
 <script src="scripts/app.js"></script>
 <script src="scripts/controllers/main.js"></script>
-<script src="scripts/controllers/about.js"></script>
 <script src="scripts/controllers/header.js"></script>
 <script src="scripts/controllers/footer.js"></script>
 <script src="scripts/services/socketfactory.js"></script>
@@ -125,6 +125,8 @@
 <script src="scripts/controllers/editibletextcell.js"></script>
 <script src="scripts/directives/editibletextcell.js"></script>
 <script src="scripts/directives/focus.js"></script>
+<script src="scripts/directives/breadcrumb.js"></script>
+<script src="scripts/controllers/student.js"></script>
 <!-- endbuild -->
 </body>
 </html>
